# alonzo

./: .gitignore  README.md  alonzo.cabal  default.nix
.github/workflows/: test.yaml
alonzo/: Syntax.hs
repl/: Main.hs
src/: Lambda.hs  Main.hs
src/Alonzo/: Interpreter.hs  Parser.hs  Syntax.hs
src/Lambda/: AST.hs  Eval.hs  Read.hs
src/Language/Alonzo/: Interpreter.hs  Parser.hs  Syntax.hs
src/REPL/: Main.hs
test/: Main.hs
tests/: Main.hs
