cabal-version:      3.0
name:               alonzo
version:            0.0.0.0
synopsis:           Lambda calculus fun
homepage:           https://github.com/asakeron/alonzo
bug-reports:        https://github.com/asakeron/alonzo
license:            AGPL-3.0-or-later
license-file:       COPYING
author:             André
maintainer:         abs@emancipe.se
category:           Development
extra-source-files:
    README.md
    COPYING

library
    exposed-modules:  Lambda
                    , Lambda.AST
                    , Lambda.Eval
                    , Lambda.Read
    build-depends:    base          ^>=4.18.0.0
                    , megaparsec
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite alonzo-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base
                    , alonzo
                    , hspec
